@@ -616,6 +616,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6041: Now distutils `sdist` and `register` commands use `check` as a 
+  subcommand.
+
 - Issue #6022: a test file was created in the current working directory by
   test_get_outputs in Distutils.
 
